# merileva

./: .gitlab-ci.yml  Cargo.toml  Makefile  Package.swift  README.md  merileva.h
example-client/: README.md
example-client/ExampleClient/: Package.swift  main.swift
example-client/Merileva/: Package.swift  merileva.h
example-swift/: README.md
example-swift/Merileva/: merileva.h
src/: errors.rs  ffi.rs  lib.rs  service.rs  types.rs  utils.rs
